--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                   Développeur Web et Mobile
                 </h1>
 
-                <a href="Ibrahim_Djingareye.pdf" class="button" download="Cv_Ibrahim_Djingareye">Télécharger Cv</a>
+                <a href="Cv_de_Ibrahim_Djingareye.pdf" class="button" download="Cv_Ibrahim_Djingareye">Télécharger Cv</a>
 
             </div>
 
