--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
             <div class="skills__container bd-grid">          
                 <div>
-                    <h2 class="skills__subtitle">Compétences Professionnelles</h2>
+                    <!-- <h2 class="skills__subtitle">Compétences Professionnelles</h2> -->
                     <!-- <p class="skills__text">J'utilise les technologies comme Angular, Spring boot, Flutter, Ionic, WordPress</p> -->
 
                     <div class="skills__data">
@@ -173,6 +173,13 @@
                             <span class="skills__percentage">68%</span>
                         </div>
                     </div>
+                    
+                </div>
+                <div>
+                    <!-- <h2 class="skills__subtitle">Compétences Professionnelles</h2> -->
+                    <!-- <p class="skills__text">J'utilise les technologies comme Angular, Spring boot, Flutter, Ionic, WordPress</p> -->
+
+                    
                     <div class="skills__data">
                         <div class="skills__names">
                             <i class='bx bxl-flutter skills__icon'></i>
@@ -246,9 +253,6 @@
                         </div>
                     </div>
                 </div>
-                <div>              
-                    <img src="work3.jpg" alt="" class="skills__img">
-                </div>
             </div>
         </section>
 
@@ -259,21 +263,32 @@
             <div class="work__container bd-grid">
                 <a href="" class="work__img">
                     <img src="MGD.jpg" alt="" style="height: 210px;">
+                    <div class="work__description">"FeereExchange" est une plateforme dynamique dédiée à la facilitation des échanges et des transactions commerciales.</div>
                 </a>
                 <a href="" class="work__img">
                     <img src="wweedd.png" alt=""style="padding-top: 30px;">
+                    <div class="work__description">"Wedding Yours" une solution simple et éfficace pour planifier un mariage. Elle répond aux besoins des couples leurs permettant de gérer toutes les tâches liées à la planification du mariage, de créer un budget et suivre ses dépenses ...
+
+                    </div>
+
                 </a>
                 <a href="" class="work__img">
                     <img src="ddd.png" alt="" style="height: 210px;">
+                    <div class="work__description">Un dashbord d'administration pour la gestion avec authentification Firebase</div>
                 </a>
                 <a href="" class="work__img">
                     <img src="dina2.png" style="height: 200px; padding-top: 30px;" alt="">
+                    <div class="work__description">"Dina Sira" une application à l'attention des  croyants musulman leurs permettant de localiser les mosquées les plus proches, de donner les fréquences pour capter les radios islamiques du Mali, d'annoncer les événements religieux (prêche, émission, …), de télécharger les récitations du coran des lecteurs Maliens et d’autres.
+                         </div>
                 </a>
                 <a href="" class="work__img">
                     <img src="portail orange form.png" alt="">
+                    <div class="work__description">Un portail pour les apprenants de ODK permettant d’avoir la photo et les informations complétes de tous les apprenants certifiés de ODK.
+                        </div>
                 </a>
                 <a href="" class="work__img">
                     <img src="dash.png" alt="" style="height: 180px; padding-top: 30px;">
+                    <div class="work__description">Le dashbord d'administration  pour l'application "Wedding Yours" pour la session admin</div>
                 </a>
             </div>
         </section>
