--- a/index.html
+++ b/index.html
@@ -301,7 +301,9 @@
                 <form action="" class="contact__form" id="contactForm">
                     <input type="text" placeholder="Nom" class="contact__input" id="nom" required>
                     <input type="mail" placeholder="Email" class="contact__input" id="email" required>
+                    <label for="tel">Contact :</label>
                     <input type="text" placeholder="Contact" class="contact__input" id="tel" required>
+                    <!-- <span id="telError" class="error-message"></span> -->
                     <textarea name="" id="message" cols="0" rows="10" class="contact__input"  required></textarea>
                     <input type="button" value="Envoyer" class="contact__button button" onclick="SendEmail()">
                 </form>
